installerat milligram och lagt över html och css från test-projekt, skapat publicerings-sida

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.13.0"
+  },
+  "dependencies": {
+    "milligram": "^1.4.1"
   }
 }
